style: fix white space text style

--- a/src/assets/css/common/button.css
+++ b/src/assets/css/common/button.css
@@ -15,5 +15,11 @@
     @apply bg-neutral-700 text-white hover:bg-neutral-800;
   }
 
-  .button--danger {}
+  .button--github {
+    @apply bg-black text-white;
+  }
+
+  .button span {
+    @apply whitespace-nowrap;
+  }
 }
